@startuml
!pragma layout smetana
'https://plantuml.com/class-diagram

scale 1.0

interface Wagon
abstract DefaultWagon
class PassengerWagon
class FreightWagon

Wagon <|.. DefaultWagon          : implements
DefaultWagon <|-- PassengerWagon : extends
DefaultWagon <|-- FreightWagon   : extends

@enduml